# RAMEN

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  Ramen.py  ScoreByIteration.txt  droppedVars.txt  pyproject.toml  setup.py  usage_example.ipynb  var_val_ref.pickle
.ipynb_checkpoints/: Ramen-checkpoint.py  setup-checkpoint.py  usage_example-checkpoint.ipynb
GeneticAlgorithm/: BinaryStringToBayesianN.py  CandidateMaker.py  CandidatesSaveFile  CandidatesSaveFile0-05  CandidatesSaveFile00  CandidatesSaveFile00001  CandidatesSaveFile00005  CandidatesSaveFile000075  CandidatesSaveFile0001  CandidatesSaveFile00015  CandidatesSaveFile00025  CandidatesSaveFile002  CandidatesSaveFile003  CandidatesSaveFile1  CandidatesSaveFile15  CrossBreeder.py  CrossValidation.py  CrossValidationMain.ipynb  CytoScapeMain.ipynb  DecisionTreeClassifier.ipynb  DecisionTreeClassifier.py  DisplayGraph.py  GeneticAlgorithm.py  GeneticAlgorithmLauncher.py  GeneticMain-Copy1.ipynb  GeneticMain-Copy2.ipynb  GeneticMain-Copy3.ipynb  GeneticMain-Copy4.ipynb  GeneticMain.ipynb  MakeCytoScapeCSV.py  MatrixMutater.py  Mutation.py  ParameterComputeMain.ipynb  ParameterComputePgmpy.py  ParameterComputerSklearn.py  ParameterLearning.ipynb  ParameterLearning.py  SavingNetwork.ipynb  ScoreByIteration1.txt  Scorer.py  (+12 more)
RandomWalk/: ArraySaver.py  CustomDataframeEdits.py  Distribution.py  DistributionMain.ipynb  InitializeGraph.py  MakeLongCovidCsvMain.ipynb  MakeLongCovidData.py  MakeMutualInfoMatrixMain.ipynb  MakeScoringDataframe.py  MutualInformation.py  OtherCsvMakers.py  PlotRandomDistribution.py  (+9 more)
(+425 files in other folders)
